--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "crypto-browserify": "^3.12.0",
+    "material-ui-popup-state": "^5.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
